--- a/full-stack-js/node-js/exercises/express-exercises/express-controllers/package.json
+++ b/full-stack-js/node-js/exercises/express-exercises/express-controllers/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "@types/express": "^5.0.0",
+    "eslint": "^9.15.0",
+    "express": "^4.21.1",
+    "express-async-handler": "^1.2.0"
   }
 }
