--- a/full-stack-js/node-js/projects/mini-message-board/package.json
+++ b/full-stack-js/node-js/projects/mini-message-board/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.1"
   }
