--- a/full-stack-js/node-js/exercises/express-exercises/forms-and-data-handling/package.json
+++ b/full-stack-js/node-js/exercises/express-exercises/forms-and-data-handling/package.json
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^5.0.0",
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
+    "express-validator": "^7.2.0"
+  }
 }
