--- a/full-stack-js/node-js/exercises/authentication/authentication-basics/package.json
+++ b/full-stack-js/node-js/exercises/authentication/authentication-basics/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
