--- a/full-stack-js/node-js/exercises/authentication/authentication-basics/package.json
+++ b/full-stack-js/node-js/exercises/authentication/authentication-basics/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
     "bcryptjs": "^2.4.3",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
