--- a/full-stack-js/node-js/exercises/orms/package.json
+++ b/full-stack-js/node-js/exercises/orms/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "prisma": "^6.0.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.0.0"
   }
 }
